; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/example/extr_counter.c_main.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/example/extr_counter.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"localhost\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %4 = call i32 @yrmcds_cnt_connect(i32* %2, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 11215)
  %5 = call i32 @check_error(i32 %4)
  %6 = call i32 @yrmcds_cnt_noop(i32* %2, i32* null)
  %7 = call i32 @check_error(i32 %6)
  %8 = call i32 @yrmcds_cnt_recv(i32* %2, i32* %3)
  %9 = call i32 @check_error(i32 %8)
  %10 = call i32 @check_response(i32* %3)
  %11 = call i32 @yrmcds_cnt_close(i32* %2)
  %12 = call i32 @check_error(i32 %11)
  ret i32 0
}

declare dso_local i32 @check_error(i32) #1

declare dso_local i32 @yrmcds_cnt_connect(i32*, i8*, i32) #1

declare dso_local i32 @yrmcds_cnt_noop(i32*, i32*) #1

declare dso_local i32 @yrmcds_cnt_recv(i32*, i32*) #1

declare dso_local i32 @check_response(i32*) #1

declare dso_local i32 @yrmcds_cnt_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
